test/zinc_source/compile_errors/rust_interop/03_opaque_field_access.zn
// expected-error: opaque extern type has no member 'display'
extern rust {
    use std::path::PathBuf;

    type PathBuf;

    impl PathBuf {
        fn from(path: string) -> PathBuf;
    }
}

fn main() {
    path = PathBuf.from("notes.txt")
    print(path.display)
}
